--- a/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
+++ b/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\JapanesePracticeApp.Core\JapanesePracticeApp.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
