--- a/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
+++ b/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\JapanesePracticeApp.Core\JapanesePracticeApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LLamaSharp" Version="0.25.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
