--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,28 @@ bin/
 obj/
 *.user
 *.suo
+*.userosscache
+*.sln.docstates
 packages/
+*.nupkg
+*.snupkg
+*.nuget.props
+*.nuget.targets
+project.lock.json
+project.fragment.lock.json
+artifacts/
+*.log
+*.vsidx
+*.vssscc
+.vs/
+
+# LLM Models (very large files)
+models/
+*.gguf
+*.bin
+
+# User data
+*.json
 
 # Universal
 .DS_Store
