--- a/src/JapanesePracticeApp.UI/JapanesePracticeApp.UI.csproj
+++ b/src/JapanesePracticeApp.UI/JapanesePracticeApp.UI.csproj
@@ -13,4 +13,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Data\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
