--- a/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
+++ b/src/JapanesePracticeApp.Infrastructure/JapanesePracticeApp.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="LLamaSharp" Version="0.25.0" />
+    <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.25.0" />
   </ItemGroup>
 
   <PropertyGroup>
